# redorm

./: .gitattributes  Cargo.nix  Cargo.toml  flake.nix
examples/: basic.rs  bulk_operations.rs  deadpool.rs  server.rs
redorm_macros/: Cargo.toml
redorm_macros/src/: attributes.rs  errors.rs  hset.rs  lib.rs
src/: lib.rs  prelude.rs  redis.rs  traits.rs
