[package]
name = "redorm_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for redorm"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"]}

[dependencies]
syn = { version = "1.0.60", features = ["extra-traits", "derive", "full"]}
quote = "1.0.9"
proc-macro2 = "1.0.32"
bae = "0.1.7"